# fish_ops_manager

./: .gitignore  README.md  Readme.md  database.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  todosapp.db
Client/: cargo-data.json  cargo-item-data.json  data.py  index.html  package.json  tailwind.config.cjs
Client/src/: App.css  App.jsx  index.jsx
Client/src/Components/Dashboard/: LeftMenuBar.jsx  TopNavigationBar.jsx
Client/src/Components/Dashboard/CreateRecipe/: CreatedrecetteElement.jsx  CreaterecetteHeadaer.jsx
Client/src/Pages/Admin/: AdminPage.jsx  MoveAdminPage.jsx
Client/src/Pages/Auth/: Login.jsx  Logout.jsx  Registration.jsx  VerifyOPT.jsx
Client/src/Pages/CreateRecipe/: CreateRecipe.jsx  PostRecipe.jsx
Client/src/Pages/Dashboard/: ChatBox.jsx  HomePage.jsx
backend/: Deployment.yml  Jemkinsfille  Jenkinsfile  Readme  ansible-playbook.yml  dockerfile  main.py  models.py  pyproject.toml  todosapp.db
backend/alembic/: env.py
backend/k8s/: Deployment.yml  Service.yaml
backend/routers/: admin.py  auth.py  cargaison.py  items.py  numaclature.py  todos.py  users.py
data/: cargaison.json  message.txt
dianel-app-front/: package-lock.json  package.json
dianel-app-front/src/: App.js
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.js  App.jsx  api.js  index.js
frontend/src/components/: Login.jsx  Register.jsx  Table.jsx
frontend/src/context/: UserContext.jsx
routers/: auth.py  fish_details.py  todos.py
(+11 files in other folders)
