[tool.poetry]
name = "fish-ops-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fish_ops_manager"}]

[tool.poetry.dependencies]
python = "^3.9"

uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"

jose = "^1.0.0"

python-jose = {extras = ["cryptogrphy"], version = "^3.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
